# scRNA_cluster

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  main.py  pyproject.toml
algorithms/: seurat.py
configs/: main.yaml
notebooks/: eda.ipynb  plots.ipynb  seurat.ipynb
src/: dmsl.py  msde.py  seurat.py
