[project]
name = "scrna-cluster"
version = "0.1.0"
description = "clustering scRNA-seq using ML & DL"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "hydra-core>=1.3.2",
    "ipykernel>=7.2.0",
    "leidenalg>=0.11.0",
    "matplotlib>=3.10.8",
    "numpy>=2.4.4",
    "omegaconf>=2.3.0",
    "scanpy>=1.12.1",
    "scvi-tools>=1.4.2",
]
